[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redteam-arena"
version = "1.0.0"
description = "Adversarial AI safety training environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RedTeam Arena Contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "openenv-core>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.30.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference", "validate", "test_integration"]

[tool.setuptools.packages.find]
include = ["environment*", "graders*", "server*"]
